@@ -1,3 +1,6 @@
+HEAD
+	+ Fix enconding for CA HTML templates
+	+ Cancel button works again when revoking and renewing a certificate
 1.3.14
 	+ Add custom module status section
 1.3.13
